# ZuoPar

./: .gitignore  CMakeLists.txt  Makefile  abstract__action_8h.html  abstract__action_8h_source.html  abstract__inexact__action_8h.html  abstract__inexact__action_8h_source.html  abstract__simple__action_8h.html  abstract__simple__action_8h_source.html  action_8h.html  action_8h_source.html  action__alphabet_8h.html  action__alphabet_8h_source.html  action__utils_8h.html  action__utils_8h_source.html  alphabet_8h.html  alphabet_8h_source.html  annotated.html  app_2conparser_2action_8h.html  app_2conparser_2action_8h_source.html  app_2conparser_2action__utils_8h.html  app_2conparser_2action__utils_8h_source.html  app_2conparser_2opt_8h.html  app_2conparser_2opt_8h_source.html  app_2conparser_2opt__utils_8h.html  app_2conparser_2opt__utils_8h_source.html  app_2conparser_2pipe_8h.html  app_2conparser_2pipe_8h_source.html  app_2depparser_2arceager_2action_8h.html  app_2depparser_2arceager_2action_8h_source.html  app_2depparser_2arceager_2action__utils_8h.html  app_2depparser_2arceager_2action__utils_8h_source.html  app_2depparser_2arceager_2decoder_8h.html  app_2depparser_2arceager_2decoder_8h_source.html  app_2depparser_2arceager_2learner_8h.html  app_2depparser_2arceager_2learner_8h_source.html  app_2depparser_2arceager_2opt_8h.html  app_2depparser_2arceager_2opt_8h_source.html  app_2depparser_2arceager_2opt__utils_8h.html  app_2depparser_2arceager_2opt__utils_8h_source.html  (+1616 more)
src/app/conparser/: CMakeLists.txt  main.cc  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h
src/app/depparser/arceager/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  greedy.cc  greedy_pipe.cc  greedy_pipe.h  learn.cc  learn.h  learner.h  main.cc  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  score_context.h  state.cc  state.h  test.cc  test.h  weight.cc  weight.h
src/app/depparser/arcstandard/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  greedy.cc  learn.cc  learn.h  learner.h  main.cc  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  score_context.h  state.cc  state.h  test.cc  test.h  weight.cc  weight.h
src/app/depparser/choi2013/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  greedy.cc  learner.h  main.cc  opt.h  opt_utils.h  pipe.h  score_context.cc  score_context.h  state.cc  state.h  weight.cc  weight.h
src/app/depparser/nn/: CMakeLists.txt  action.h  action_utils.h  classifier.cc  classifier.h  dataset.cc  dataset.h  decoder.cc  decoder.h  extractor.cc  extractor.h  main.cc  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  state.h  utils.h
src/app/depparser/swap/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  greedy.cc  learner.h  main.cc  opt.h  opt_utils.h  pipe.h  score_context.cc  score_context.h  state.cc  state.h  weight.cc  weight.h
src/app/lexanalyzer/postagger/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  learner.h  main.cc  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  score_context.h  state.cc  state.h  weight.cc  weight.h
src/app/lexanalyzer/wordseg/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  learner.h  main.cc  opt.h  opt_utils.h  pipe.cc  pipe.h  score_context.cc  score_context.h  state.cc  state.h  weight.cc  weight.h
src/app/semchunker/mono/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  argument_relation_utils.cc  argument_relation_utils.h  decoder.cc  decoder.h  information.cc  information.h  learner.h  main.cc  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  score_context.cc  score_context.h  state.cc  state.h  weight.cc  weight.h
src/app/seqlabeler/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  learner.h  main.cc  multi_pipe.cc  multi_pipe.h  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  score_context.h  state.cc  state.h  weight.cc  weight.h
src/app/seqlabeler/trans/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  learner.h  main.cc  multi_pipe.cc  multi_pipe.h  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  score_context.h  state.cc  state.h  weight.cc  weight.h
src/experimental/acl2015/mono_srl/: .score_context.h.swp  CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  learner.h  main.cc  opt.h  opt_utils.cc  opt_utils.h  paths.cc  paths.h  pipe.cc  pipe.h  score_context.h  state.cc  state.h  weight.cc  weight.h
src/experimental/acl2015/multi_predicate_srl/: CMakeLists.txt  action.cc  decoder.cc  decoder.h  main.cc  pipe.h  state.cc  weight.cc  weight.h
src/experimental/hc_search/: CMakeLists.txt  cstep_opt.h  cstep_opt_utils.cc  cstep_opt_utils.h  evaluate.h  hstep_opt.h  hstep_opt_utils.cc  hstep_opt_utils.h  knowledge.cc  knowledge.h  learner.h  loss.h  main.cc  pipe.cc  pipe.h  score_context.cc  score_context.h  weight.cc  weight.h
src/experimental/hc_search/arceager/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  decoder.cc  decoder.h  gen.py  knowledge.cc  knowledge.h  learner.h  main.cc  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  score_context.cc  score_context.h  state.cc  state.h  weight.cc  weight.h
src/experimental/hc_search/arcstandard/: CMakeLists.txt  main.cc  pipe.cc  pipe.h
src/experimental/multi_predicate_srl/: CMakeLists.txt  action.cc  action.h  action_utils.cc  action_utils.h  argument_relation_utils.cc  argument_relation_utils.h  decoder.cc  decoder.h  information.cc  information.h  learner.h  main.cc  opt.h  opt_utils.cc  opt_utils.h  pipe.cc  pipe.h  score_context.cc  score_context.h  state.cc  state.h  weight.cc  weight.h
src/utils/io/: CMakeLists.txt  dataset.cc  dataset.h  instance.cc  instance.h  stream.cc  stream.h
src/utils/io/dataset/: block_iterator.h  chunks.cc  chunks.h  constituent.cc  constituent.h  csv.cc  csv.h  (+10 more)
(+500 files in other folders)
