set (io_SRC
    stream.h
    stream.cc
    instance/chunks.h
    instance/chunks.cc
    instance/constituent.h
    instance/constituent.cc
    instance/csv.h
    instance/csv.cc
    instance/dependency.h
    instance/dependency.cc
    instance/lisp.h
    instance/lisp.cc
    instance/segmentation.h
    instance/segmentation.cc
    instance/semchunks.h
    instance/semchunks.cc   
    instance/sequence_instance.h
    instance/sequence_instance.cc
    instance/postag.h
    instance/postag.cc
    dataset/block_iterator.h
    dataset/chunks.h
    dataset/chunks.cc
    dataset/constituent.h
    dataset/constituent.cc
    dataset/csv.h
    dataset/csv.cc
    dataset/dependency.h
    dataset/dependency.cc
    dataset/postag.h
    dataset/postag.cc
    dataset/segmentation.h
    dataset/segmentation.cc
    dataset/semchunks.h
    dataset/semchunks.cc
    dataset/sequence_instance.h
    dataset/sequence_instance.cc
    )

add_library (_zuo_io ${io_SRC})